components/ua/user-establishment-details/overlays/prod/patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-establishment-details
spec:
  template:
    spec:
      containers:
        - name: user-establishment-details
          # version: 1.7.0
          image: ghcr.io/isisbusapps/user-establishment-details@sha256:9e500982339b451a7753a058c6fe95dbcbddc2d2a8bb4993b5f41011a8e04d6c
