components/ua/user-establishment-details/overlays/prod/patch-image.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-establishment-details
spec:
  template:
    spec:
      containers:
        - name: user-establishment-details
          # version: 1.4.4
          image: ghcr.io/isisbusapps/user-establishment-details:1.4.4
